tests/NormalTests/paczka1/fuzzy1/21159048.err
Error in line 5: Qsf S413 8,9
Error in line 18: S975 S975 90,9
